--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% flash.each do |name, msg| -%>
+    <%= content_tag :div, msg, class: name %>
+  <% end -%> 
+
+  <div id="user-nav">
+    <% if current_admin %>
+      Welcome <%= current_admin.name %>!
+      <%= link_to "Sign Out", signout_path %>
+    <% else %>
+      <%= link_to "Sign in", "/auth/google_apps_oauth2" %>
+    <% end %>
+  </div>
 
 <%= yield %>
 
