--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>AccountLayer</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <% flash.each do |name, msg| -%>
-    <%= content_tag :div, msg, class: name %>
-  <% end -%> 
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>AccountLayer</title>
 
-  <div id="user-nav">
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <% flash.each do |name, msg| -%>
+      <%= content_tag :div, msg, class: name %>
+    <% end -%> 
+
     <% if current_admin %>
-      Welcome <%= current_admin.name %>!
-      <%= link_to "Sign Out", signout_path %>
+      <div data-admin-name="<%= current_admin.name %>" id="app"></div>
     <% else %>
-      <%= link_to "Sign in", "/auth/google_apps_oauth2" %>
+      <div id="user-nav">
+        <%= link_to "Sign in", "/auth/google_apps_oauth2" %>
+      </div>
     <% end %>
-  </div>
 
-<%= yield %>
-
-</body>
+    <%= yield %>
+  </body>
 </html>
+
