correct navbar styling

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,3 +8,13 @@ body
   padding: 15px
   color: white
   
+.navbar-inverse .navbar-nav > li > a
+  &.active
+    color: white
+    &:hover, &:focus
+      color: white
+  &:focus
+    color: #9d9d9d
+  &:hover
+    color: white
+    
